--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@jpmorganchase/onyx-ssi-sdk": "^0.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "did-resolver": "^4.1.0",
     "ethers": "5.7.1",
     "ethr-did": "^2.3.23",
+    "ethr-did-resolver": "^9.0.0",
+    "lodash": "^4.17.21",
     "magic-sdk": "^20.1.0",
     "next": "latest",
     "react": "latest",
