--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@jpmorganchase/onyx-ssi-sdk": "^0.0.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +24,7 @@
     "ethr-did-resolver": "^9.0.0",
     "lodash": "^4.17.21",
     "magic-sdk": "^20.1.0",
+    "multiformats": "^12.1.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
