--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "did-jwt-vc": "^3.2.11",
     "did-resolver": "^4.1.0",
     "ethers": "5.7.1",
     "ethr-did": "^2.3.23",
