added worldcoin, but need to add context

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@worldcoin/idkit": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "did-jwt-vc": "^3.2.11",
@@ -27,6 +28,7 @@
     "magic-sdk": "^20.1.0",
     "multiformats": "^12.1.2",
     "next": "latest",
+    "pino-pretty": "^10.2.3",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
