--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "latest",
